Related tdf#140849: "Apply and Edit changes" from AutoCorrect crashes LO writer

Related only because it fixes assertion/segfault here:
4  0x00007f1e541c2084 in rtl::OUString::operator[](int) const (this=0x6f2c928, index=1) at include/rtl/ustring.hxx:791
5  0x00007f1e54426a11 in SvxAutoCorrect::FnAddNonBrkSpace(SvxAutoCorrDoc&, rtl::OUString const&, int, o3tl::strong_int<unsigned short, LanguageTypeTag>, bool&) (this=0x6ece990, rDoc=
    ..., rTxt="a", nEndPos=1, eLang=..., io_bNbspRunNext=@0x7ffce2a292c7: false) at editeng/source/misc/svxacorr.cxx:670
6  0x00007f1e38df4fef in SwAutoFormat::AutoCorrect(o3tl::strong_int<int, Tag_TextFrameIndex>) (this=0x7ffce2a29960, nPos=...) at sw/source/core/edit/autofmt.cxx:2191
7  0x00007f1e38df5e0b in SwAutoFormat::BuildText() (this=0x7ffce2a29960) at sw/source/core/edit/autofmt.cxx:1469
See https://bugs.documentfoundation.org/attachment.cgi?id=170289

But it's a specific "Fr" case and the author submitted his bug with locale and language different from French
so I suppose there's something else.

Change-Id: I19b964fb8fe437c7f98342a873a456ffded75d82